--- a/app/src/main/res/layout/option_edit_element.xml
+++ b/app/src/main/res/layout/option_edit_element.xml
@@ -100,7 +100,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/progress"/>
+        android:theme="@style/LoaderAccent"/>
 
         <RelativeLayout
             android:layout_height="wrap_content"
