--- a/app/src/main/res/layout/sondage_element.xml
+++ b/app/src/main/res/layout/sondage_element.xml
@@ -24,24 +24,61 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/sondage_elem_avatar"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@mipmap/ic_launcher"
+                    android:visibility="visible"
+                    android:layout_marginEnd="5dp"
+                    app:civ_border_color="@color/colorPrimary"
+                    android:layout_gravity="bottom"
+                    app:civ_border_width="0dp" />
+
+                <TextView
+                    android:id="@+id/sondage_elem_nom_auteur"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/colorPrimaryMedDark"
+                    android:textSize="16sp" />
+                <RelativeLayout
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <com.balysv.materialripple.MaterialRippleLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp">
+
+                        <ImageButton
+                            android:id="@+id/sondage_elem_plainte_btn"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/round_btn"
+                            android:contentDescription="@string/Sondage_Elem_ImgBtn_Plainte_Desc"
+                            android:src="@drawable/ic_flag"
+                            android:tint="@color/colorRed" />
+                    </com.balysv.materialripple.MaterialRippleLayout>
+                </RelativeLayout>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/sondage_elem_titre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-            <TextView
-                android:id="@+id/sondage_elem_nom_auteur"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="18sp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -64,31 +101,13 @@
                     android:textAppearance="@style/TextAppearance.AppCompat" />
             </LinearLayout>
 
+
+
+
+
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1">
 
-            <com.balysv.materialripple.MaterialRippleLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                app:mrl_rippleRoundedCorners="2dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp">
-
-                <ImageButton
-                    android:id="@+id/sondage_elem_plainte_btn"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/round_btn"
-                    android:contentDescription="@string/Sondage_Elem_ImgBtn_Plainte_Desc"
-                    android:src="@drawable/ic_flag"
-                    android:tint="@color/colorRed" />
-            </com.balysv.materialripple.MaterialRippleLayout>
-        </RelativeLayout>
     </LinearLayout>
 
     <ProgressBar
