--- a/app/src/main/res/layout/answer_option_element.xml
+++ b/app/src/main/res/layout/answer_option_element.xml
@@ -75,6 +75,7 @@
             android:layout_weight="0">
 
             <CheckBox
+                android:theme="@style/LoaderAccent"
                 android:id="@+id/answer_option_checkbox"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
