--- a/app/src/main/res/layout/fragment_answer_sondage.xml
+++ b/app/src/main/res/layout/fragment_answer_sondage.xml
@@ -31,19 +31,47 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+        <LinearLayout
+            android:id="@+id/PollAnswerDates"
+            android:layout_below="@id/answer_sondage_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/sondage_answer_date_debut"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
+
+            <TextView
+                android:id="@+id/sondage_answer_date_fin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
+        </LinearLayout>
+
 
     <TextView
-        android:layout_below="@id/answer_sondage_title"
+        android:layout_below="@id/PollAnswerDates"
         android:id="@+id/answer_sondage_auteur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center" />
+        android:clickable="true"
+        android:focusable="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorPrimaryMedDark"
+        android:textAlignment="center"
+        android:layout_marginBottom="5dp"/>
     </RelativeLayout>
 
 
     <ListView
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:padding="7dp"
         android:clipToPadding="false"
         android:id="@+id/answer_sondage_questions"
         android:layout_width="match_parent"
@@ -51,12 +79,8 @@
         android:layout_above="@id/answer_sondage_btn_zone"
         android:layout_below="@id/headeranswer"
         android:divider="@color/transparent"
-        android:dividerHeight="10dp"
-        android:paddingEnd="7dp"
-        android:paddingStart="7dp"/>
+        android:dividerHeight="10dp"/>
     <LinearLayout
-        android:paddingEnd="7dp"
-        android:paddingStart="7dp"
         android:layout_width="match_parent"
         android:id="@+id/answer_sondage_btn_zone"
         android:layout_alignParentBottom="true"
