--- a/app/src/main/res/layout/fragment_creer_sondage.xml
+++ b/app/src/main/res/layout/fragment_creer_sondage.xml
@@ -55,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorRed"
+        android:layout_marginBottom="5dp"
         android:visibility="invisible" />
     <View
         android:layout_width="match_parent"
@@ -62,6 +63,7 @@
         android:background="@drawable/shadow_top_down" />
 
     <TabHost
+        android:theme="@style/LoaderAccent"
         android:id="@+id/TabHost"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -131,6 +133,7 @@
                             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
                         <DatePicker
+                            android:calendarTextColor="@color/colorPrimaryMedDark"
                             android:id="@+id/sondage_edit_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -283,16 +286,12 @@
                         android:visibility="visible" />
 
                     <ListView
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:padding="7dp"
                         android:clipToPadding="false"
-                        android:paddingStart="7dp"
-                        android:paddingEnd="7dp"
                         android:layout_below="@id/PollEditAddQuestion"
                         android:id="@+id/sondage_edit_questions_list"
                         android:layout_width="match_parent"
                         android:layout_height="fill_parent"
-                        android:layout_marginTop="5dp"
                         android:descendantFocusability="beforeDescendants"
                         android:divider="@color/transparent"
                         android:dividerHeight="10dp" />
