--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -23,6 +23,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
         <EditText
+            android:theme="@style/LoaderAccent"
             android:id="@+id/profil_form_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
 
 
         <EditText
+            android:theme="@style/LoaderAccent"
             android:id="@+id/profil_form_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,6 +72,7 @@
             android:textColor="@color/colorRed" />
 
         <EditText
+            android:theme="@style/LoaderAccent"
             android:id="@+id/profil_form_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
