--- a/app/src/main/res/layout/fragment_publication_list.xml
+++ b/app/src/main/res/layout/fragment_publication_list.xml
@@ -38,11 +38,8 @@
         android:layout_height="fill_parent"
         android:id="@+id/PubListRefresh">
         <ListView
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:padding="7dp"
             android:clipToPadding="false"
-            android:paddingEnd="7dp"
-            android:paddingStart="7dp"
             android:id="@id/android:list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
