--- a/app/src/main/res/layout/fragment_sondage_list.xml
+++ b/app/src/main/res/layout/fragment_sondage_list.xml
@@ -51,10 +51,7 @@
             android:dividerHeight="10dp"
             android:footerDividersEnabled="false"
             android:headerDividersEnabled="false"
-            android:paddingStart="7dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="7dp"
-            android:paddingBottom="5dp" />
+            android:padding="7dp" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <View
