--- a/app/src/main/res/layout/option_edit_element.xml
+++ b/app/src/main/res/layout/option_edit_element.xml
@@ -37,6 +37,7 @@
     </LinearLayout>
 
     <EditText
+        android:theme="@style/LoaderAccent"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
