--- a/app/src/main/res/layout/publication_element.xml
+++ b/app/src/main/res/layout/publication_element.xml
@@ -27,27 +27,15 @@
             app:civ_border_color="@color/colorPrimary"
             app:civ_border_width="0dp" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/pub_elem_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/pub_elem_username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/pub_elem_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@color/colorPrimaryMedDark"
+            android:textSize="16sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -85,7 +73,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp" />
-
+    <TextView
+        android:paddingStart="7dp"
+        android:paddingEnd="7dp"
+        android:layout_marginTop="5dp"
+        android:id="@+id/pub_elem_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <TextView
 
         android:layout_marginTop="5dp"
